--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@ set ( SOURCE
     ${SOURCE}
     ${CMAKE_CURRENT_SOURCE_DIR}/twoSum.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/matrixDiagonasum.cpp
-
+    ${CMAKE_CURRENT_SOURCE_DIR}/palidromeNumber.cpp
 
     PARENT_SCOPE
 
@@ -12,6 +12,7 @@ set ( HEADERS
     ${SOURCE}
     ${CMAKE_CURRENT_SOURCE_DIR}/twoSum.h
     ${CMAKE_CURRENT_SOURCE_DIR}/matrixDiagonasum.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/palidromeNumber.h
 
     PARENT_SCOPE
 )
