--- a/src/daily/CMakeLists.txt
+++ b/src/daily/CMakeLists.txt
@@ -2,6 +2,7 @@ set ( SRC_SOURCE
   ${SRC_SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/matrixDiagonasum.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/spiralMatrix.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/uncrossedLines.cpp
 
 
   PARENT_SCOPE
@@ -12,6 +13,7 @@ set ( SRC_HEADERS
   ${SRC_HEADERS}
   ${CMAKE_CURRENT_SOURCE_DIR}/matrixDiagonasum.h
   ${CMAKE_CURRENT_SOURCE_DIR}/spiralMatrix.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/uncrossedLines.h
 
   PARENT_SCOPE
 ) 
