Swap Node in Pairs

--- a/src/daily/CMakeLists.txt
+++ b/src/daily/CMakeLists.txt
@@ -4,8 +4,8 @@ set ( SRC_SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/spiralMatrix.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/uncrossedLines.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/swappingNodes.cpp
-
-
+  ${CMAKE_CURRENT_SOURCE_DIR}/swappairs.cpp
+  
   PARENT_SCOPE
 )
 
@@ -16,6 +16,7 @@ set ( SRC_HEADERS
   ${CMAKE_CURRENT_SOURCE_DIR}/spiralMatrix.h
   ${CMAKE_CURRENT_SOURCE_DIR}/uncrossedLines.h
   ${CMAKE_CURRENT_SOURCE_DIR}/swappingNodes.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/swappairs.h
 
   PARENT_SCOPE
 ) 
