Maximun Twin Sum

--- a/src/daily/CMakeLists.txt
+++ b/src/daily/CMakeLists.txt
@@ -5,6 +5,8 @@ set ( SRC_SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/uncrossedLines.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/swappingNodes.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/swappairs.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/maximunTwinSum.cpp
+
   
   PARENT_SCOPE
 )
@@ -17,6 +19,8 @@ set ( SRC_HEADERS
   ${CMAKE_CURRENT_SOURCE_DIR}/uncrossedLines.h
   ${CMAKE_CURRENT_SOURCE_DIR}/swappingNodes.h
   ${CMAKE_CURRENT_SOURCE_DIR}/swappairs.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/maximumTwinSum.h
+
 
   PARENT_SCOPE
 ) 
