Minimu vertices to reach

--- a/src/daily/CMakeLists.txt
+++ b/src/daily/CMakeLists.txt
@@ -6,6 +6,7 @@ set ( SRC_SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/swappingNodes.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/swappairs.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/maximunTwinSum.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/minimunverticestoreach.cpp
 
   
   PARENT_SCOPE
@@ -20,6 +21,7 @@ set ( SRC_HEADERS
   ${CMAKE_CURRENT_SOURCE_DIR}/swappingNodes.h
   ${CMAKE_CURRENT_SOURCE_DIR}/swappairs.h
   ${CMAKE_CURRENT_SOURCE_DIR}/maximumTwinSum.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/minimunverticestoreach.h
 
 
   PARENT_SCOPE
