graph bipartite to be done
- Breadth-first search (BFS)
- Depth-First Search - DFS

--- a/src/daily/CMakeLists.txt
+++ b/src/daily/CMakeLists.txt
@@ -7,6 +7,7 @@ set ( SRC_SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/swappairs.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/maximunTwinSum.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/minimunverticestoreach.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/graphbipartite.cpp
 
   
   PARENT_SCOPE
@@ -22,6 +23,7 @@ set ( SRC_HEADERS
   ${CMAKE_CURRENT_SOURCE_DIR}/swappairs.h
   ${CMAKE_CURRENT_SOURCE_DIR}/maximumTwinSum.h
   ${CMAKE_CURRENT_SOURCE_DIR}/minimunverticestoreach.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/graphbipartite.h
 
 
   PARENT_SCOPE
