[LC217] Containes Duplicate
- First java leetCode test;
- Containes Duplicated resolution;
- Commited using lazygit :) ;

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 # Build Folder
 build/
 .vscode/
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
